--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -32,10 +32,10 @@
   }
 </style>
 <div id="inSlider" class="carousel carousel-fade blur" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#inSlider" data-slide-to="0" class="active"></li>
-    <li data-target="#inSlider" data-slide-to="1"></li>
-  </ol>
+  <!--<ol class="carousel-indicators">-->
+  <!--<li data-target="#inSlider" data-slide-to="0" class="active"></li>-->
+  <!--<li data-target="#inSlider" data-slide-to="1"></li>-->
+  <!--</ol>-->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <div class="container">
@@ -69,14 +69,14 @@
     <!--<div class="header-back two"></div>-->
     <!--</div>-->
   </div>
-  <a class="left carousel-control" href="#inSlider" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#inSlider" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+  <!--<a class="left carousel-control" href="#inSlider" role="button" data-slide="prev">-->
+  <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+  <!--<span class="sr-only">Previous</span>-->
+  <!--</a>-->
+  <!--<a class="right carousel-control" href="#inSlider" role="button" data-slide="next">-->
+  <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+  <!--<span class="sr-only">Next</span>-->
+  <!--</a>-->
 </div>
 
 <section id="social-media">
