added some things

--- a/app/views/responders/certifications.html.erb
+++ b/app/views/responders/certifications.html.erb
@@ -29,7 +29,7 @@
                 <th style="text-align: center;">Verified</th>
                 <th>
                   <%= link_to '/', class: 'btn btn-success btn-xs btn-block btn-outline' do %>
-                    <i class="fas fa-cloud-download-alt"></i> Download All
+                    <i class="fa fa-cloud-download"></i> Download All
                   <% end %>
                 </th>
                 <th>
@@ -49,7 +49,7 @@
                   <td class="center" style="text-align: center;"><i class="center fas fa-check"></i></td>
                   <td class="center">
                     <%= link_to cert.document.url, class: 'btn btn-info btn-xs btn-block btn-outline' do %>
-                      <i class="far fa-file-pdf"></i> PDF
+                      <i class="fas fa-file-pdf-o"></i> PDF
                     <% end %>
                   </td>
                   <td class="center">
