--- a/app/views/responders/_main_nav.html.erb
+++ b/app/views/responders/_main_nav.html.erb
@@ -5,7 +5,7 @@
 </li>
 <li class="">
   <a href="#">
-    <i class="far fa-question-circle"></i> <span class="nav-label"> FAQ</span>
+    <i class="fas fa-question-circle"></i> <span class="nav-label"> FAQ</span>
   </a>
 </li>
 <li>
@@ -15,7 +15,8 @@
 </li>
 <li class="">
   <%= link_to responder_certifications_path(current_responder) do %>
-    <i class="fas fa-certificate"></i> <span class="nav-label"> Certifications</span>
+    <i class="fas fa-certificate"></i> <span class="nav-label"> Certifications
+</span>
   <% end %>
 </li>
 <!--<li class="">-->
@@ -23,14 +24,22 @@
 <!--<i class="fas fa-user-secret"></i> <span class="nav-label"> Background Check </span>-->
 <!--</a>-->
 <!--</li>-->
-<!--<li class="">-->
-<!--<a href="#">-->
-<!--<i class="fa fa-star"></i> <span class="nav-label"> Ranking </span>-->
-<!--</a>-->
-<!--</li>-->
 <li class="">
   <a href="#">
-    <i class="fa fa-star"></i>
-    <span class="nav-label"> Messages <span class="label label-info pull-right">14</span></span>
+    <i class="fas fa-building"></i> <span class="nav-label">
+    Job Portal <div class="stat-percent font-bold text-info"> coming soon</div>
+  </span>
   </a>
 </li>
+<!--<li class="">-->
+<!--<a href="#">-->
+<!--<i class="fa fa-star"></i> <span class="nav-label">  </span>-->
+<!--</a>-->
+<!--</li>-->
+
+<!--<li class="">-->
+<!--<a href="#">-->
+<!--<i class="fa fa-star"></i>-->
+<!--<span class="nav-label"> Messages <span class="label label-info pull-right">14</span></span>-->
+<!--</a>-->
+<!--</li>-->
