[setup-railsadmin][ RJ ] added and fixed teh certification page.

--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -1,6 +1,6 @@
 <div class="row wrapper border-bottom white-bg page-heading">
   <div class="col-sm-4">
-    <h2>Main Dashboard</h2>
+    <h2>Responders Now</h2>
     <ol class="breadcrumb">
       <li>
         <a href="<%= url_for :controller => 'dashboards', :action => 'dashboard_1' %>">This is</a>
