--- a/app/views/responders/certifications.html.erb
+++ b/app/views/responders/certifications.html.erb
@@ -13,12 +13,14 @@
 </div>
 <div class="wrapper wrapper-content  animated fadeInRight">
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-12">
       <!---->
-      <div class="ibox-title">
-        <h5>My Documents</h5>
-        <div class="ibox-content">
-          <% unless current_responder.aquired_certifications.present? %>
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h5 class="panel-title">Documents</h5>
+        </div>
+        <div class="panel-body">
+          <% unless current_responder.aquired_certifications %>
             <h1>No Documents / No Certifications</h1>
           <% else %>
             <table class="table table-striped table-bordered table-hover dataTables-example">
@@ -26,18 +28,17 @@
               <tr>
                 <th>Name</th>
                 <th>Date Aquired</th>
-                <th style="text-align: center;">Verified</th>
-                <th>
-                  <%= link_to '/', class: 'btn btn-success btn-xs btn-block btn-outline' do %>
-                    <i class="fa fa-cloud-download"></i> Download All
-                  <% end %>
-                </th>
-                <th>
-                  <%= button_to '/', class: 'btn btn-danger btn-xs btn-block btn-outline',
+                <th class="text-center">
+                  <div class="btn-group">
+                    <%= link_to '/', class: 'btn btn-success btn-xs btn-outline' do %>
+                      <i class="fas fa-download"></i> Download All
+                    <% end %>
+                    <%= link_to '/', class: 'btn btn-danger btn-xs btn-outline',
                                 method: :delete,
                                 confirm: 'Are you sure you want to delete this?' do %>
-                    <i class="fa fa-trash"></i> Delete All
-                  <% end %>
+                      <i class="fa fa-trash"></i> Delete All
+                    <% end %>
+                  </div>
                 </th>
               </tr>
               </thead>
@@ -46,18 +47,17 @@
                 <tr class="gradeX">
                   <td><%= cert.certification.name %></td>
                   <td><%= cert.aquired_on %></td>
-                  <td class="center" style="text-align: center;"><i class="center fas fa-check"></i></td>
-                  <td class="center">
-                    <%= link_to cert.document.url, class: 'btn btn-info btn-xs btn-block btn-outline' do %>
-                      <i class="fas fa-file-pdf-o"></i> PDF
-                    <% end %>
-                  </td>
-                  <td class="center">
-                    <%= button_to aquired_certification_path(cert.id), class: 'btn btn-danger btn-xs btn-block btn-outline',
+                  <td class="text-center">
+                    <div class="btn-group">
+                      <%= link_to cert.document.url, class: 'btn btn-info btn-sm btn-outline' do %>
+                        <i class="far fa-file-pdf"></i> PDF
+                      <% end %>
+                      <%= link_to aquired_certification_path(cert.id), class: 'btn btn-sm btn-danger btn-outline',
                                   method: :delete,
                                   confirm: 'Are you sure you want to delete this?' do %>
-                      <i class="fa fa-trash"></i> Delete
-                    <% end %>
+                        <i class="fa fa-trash"></i>
+                      <% end %>
+                    </div>
                   </td>
                 </tr>
               <% end %>
@@ -66,47 +66,6 @@
         </div>
       </div>
       <!---->
-    </div>
-    <div class="col-lg-6">
-      <div class="ibox float-e-margins">
-        <div class="ibox-title">
-          <h5>Add New Document</h5>
-          <div class="ibox-content">
-            <%= simple_form_for @certification, class: 'col-sm-6' do |f| %>
-              <%= error_messages_for @certification %>
-              <div class="form-group">
-                <%= f.association :certification, collection: Certification.order(:name), class: 'col-sm-8' %>
-                <small>Are we missing your cert?
-                  <%= link_to 'Request it!', new_certification_path %>
-                </small>
-              </div>
-              <div class="form-group form-inline">
-                <label>Certification / License ID Number</label><br>
-                <%= f.input :number, label: false %> <br>
-                <%= f.input :aquired_on, as: :date, start_year: Date.today.year - 50,
-                            end_year: Date.today.year, discard_day: true,
-                            order: [:month, :year], label: 'Aquired On', id: 'wh-end-date' %>
-                <%= f.input :expires_on, as: :date, start_year: Date.today.year + 10,
-                            end_year: Date.today.year, discard_day: true,
-                            order: [:month, :year], label: 'Expires ?', id: 'wh-end-date' %> <br>
-                <div>
-                  <%= f.input_field :expires, as: :boolean, class: 'check_box', inline_label: 'Does Not Expire', as: :boolean, checked_value: true, unchecked_value: false %>
-                </div>
-                <div>
-                  <%= f.input_field :primary, as: :boolean, class: 'check_box', inline_label: 'Primary', as: :boolean, checked_value: true, unchecked_value: false %>
-                  <br>
-                </div>
-                <%= f.input :document, label: 'Upload PDF', as: :file, class: 'input-group-addon btn btn-default btn-file' %>
-              </div>
-              <br>
-              <%= f.button :button, class: 'btn btn btn-info btn-trans' do %>
-                <i class='fas fa-save'></i>
-                Save
-              <% end %>
-            <% end %>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
