--- a/app/views/responders/_main_nav.html.erb
+++ b/app/views/responders/_main_nav.html.erb
@@ -25,11 +25,12 @@
 <!--</a>-->
 <!--</li>-->
 <li class="">
-  <a href="#">
+  <%= link_to job_board_index_path do %>
     <i class="fas fa-building"></i> <span class="nav-label">
-    Job Portal <div class="stat-percent font-bold text-info"> coming soon</div>
-  </span>
-  </a>
+      Job Board <div class="stat-percent font-bold text-info"> new</div>
+    </span>
+  <% end %>
+
 </li>
 <!--<li class="">-->
 <!--<a href="#">-->
