--- a/app/views/responders/_responder_metrics.html.erb
+++ b/app/views/responders/_responder_metrics.html.erb
@@ -23,7 +23,7 @@
       <div class="panel-body">
         <h1 class="no-margins">
           <h1 class="no-margins">
-            <%= current_responder.aquired_certifications.count if current_responder.aquired_certifications.any? %>
+            <%= current_responder.acquired_certifications.count if current_responder.acquired_certifications.any? %>
           </h1>
           <div class="stat-percent font-bold text-success"><i class="fa fa-bolt"></i> top 10% in your area</div>
           <small>uploaded</small>
