--- a/app/views/responders/_main_nav.html.erb
+++ b/app/views/responders/_main_nav.html.erb
@@ -8,14 +8,16 @@
     <i class="fas fa-question-circle"></i> <span class="nav-label"> FAQ</span>
   </a>
 </li>
-<li>
-  <%= link_to responder_work_histories_path(current_responder) do %>
-    <i class="fas fa-briefcase"></i> <span class="nav-label"> Work History</span>
-  <% end %>
-</li>
 <li class="">
   <%= link_to responder_certifications_path(current_responder) do %>
-    <i class="fas fa-certificate"></i> <span class="nav-label"> Certifications
+    <i class="fas fa-certificate"></i> <span class="nav-label"> Certifications</span>
+  <% end %>
+</li>
+<li>
+  <!--  #responder_work_histories_path(current_responder)-->
+  <%= link_to '#' do %>
+    <i class="fas fa-briefcase"></i> <span class="nav-label"> Work Hx
+    <div class="stat-percent font-bold text-info"> coming soon</div>
 </span>
   <% end %>
 </li>
@@ -25,12 +27,12 @@
 <!--</a>-->
 <!--</li>-->
 <li class="">
-  <%= link_to job_board_index_path do %>
+  <!--  job_board_index_path-->
+  <%= link_to "#" do %>
     <i class="fas fa-building"></i> <span class="nav-label">
-      Job Board <div class="stat-percent font-bold text-info"> new</div>
+      Job Board <div class="stat-percent font-bold text-info"> coming soon</div>
     </span>
   <% end %>
-
 </li>
 <!--<li class="">-->
 <!--<a href="#">-->
