[add-job-posting][ RJ ] BIG CHANGES... NEED DB REBUILT, changed the responders model to actually be a users model

--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -13,7 +13,7 @@
 </div>
 <div class="wrapper wrapper-content">
   <section>
-    <%= render partial: 'responders/responder_metrics' %>
+    <%= render partial: 'users/user_metrics' %>
   </section>
   <section>
     <div class="row">
