--- a/app/views/users/_main_nav.html.erb
+++ b/app/views/users/_main_nav.html.erb
@@ -9,12 +9,12 @@
   </a>
 </li>
 <li class="">
-  <%= link_to responder_certifications_path(current_responder) do %>
+  <%= link_to user_certifications_path(current_user) do %>
     <i class="fas fa-certificate"></i> <span class="nav-label"> Certifications</span>
   <% end %>
 </li>
 <li>
-  <!--  #responder_work_histories_path(current_responder)-->
+  <!--  #user_work_histories_path(current_user)-->
   <%= link_to '#' do %>
     <i class="fas fa-briefcase"></i> <span class="nav-label"> Work Hx
     <div class="stat-percent font-bold text-info"> coming soon</div>
