--- a/app/views/users/_user_metrics.html.erb
+++ b/app/views/users/_user_metrics.html.erb
@@ -7,7 +7,7 @@
       </div>
       <div class="panel-body">
         <h1 class="no-margins">
-          <%= current_responder.zipcode if current_responder.zipcode %>
+          <%= current_user.zipcode if current_user.zipcode %>
         </h1>
         <!--<div class="stat-percent font-bold text-success">top 10% <i class="fa fa-bolt"></i></div>-->
         <small>click here to <a href="">update</a>.</small>
@@ -23,7 +23,7 @@
       <div class="panel-body">
         <h1 class="no-margins">
           <h1 class="no-margins">
-            <%= current_responder.acquired_certifications.count if current_responder.acquired_certifications.any? %>
+            <%= current_user.acquired_certifications.count if current_user.acquired_certifications.any? %>
           </h1>
           <div class="stat-percent font-bold text-success"><i class="fa fa-bolt"></i> top 10% in your area</div>
           <small>uploaded</small>
@@ -39,7 +39,7 @@
       </div>
       <div class="panel-body">
         <h1 class="no-margins">
-          <%= current_responder.zipcode if current_responder.zipcode %>
+          <%= current_user.zipcode if current_user.zipcode %>
         </h1>
         <small>click here to <a href="">update</a>.</small>
       </div>
@@ -116,7 +116,7 @@
 <!--<div class="ibox-content">-->
 <!--<h1 class="no-margins">ACTIVE</h1>-->
 <!--<div class="stat-percent font-bold text-success"><i class="fa fa-level-up"></i></div>-->
-<!--<small>There are 120 responders within 50 miles of you</small>-->
+<!--<small>There are 120 users within 50 miles of you</small>-->
 <!--</div>-->
 <!--</div>-->
 <!--</div>-->
