--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -18,7 +18,7 @@
 <!--<p>-->
 <!--Click Here to login-->
 <!--</p>-->
-<!--<%= link_to responder_facebook_omniauth_authorize_path, class: 'btn btn-success btn-facebook' do %>-->
+<!--<%= link_to user_facebook_omniauth_authorize_path, class: 'btn btn-success btn-facebook' do %>-->
   <!--<i class="fa fa-facebook"> </i> Sign in with Facebook-->
   <!--
 <% end %>-->
@@ -247,32 +247,41 @@
 
 </style>
 
+<div class="middle-box text-center loginscreen   animated fadeInDown">
+  <div>
+    <h3>Welcome Responder</h3>
+    <p>Create account to see it in action.</p>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
 
-<div class="container">
-  <div class="row">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div id="loginform">
-      <%= link_to responder_facebook_omniauth_authorize_path do %>
-        <div id="facebook"><i class="fa fa-facebook"></i>
-          <div id="connect">Login with Facebook</div>
+      <div class="form-inputs">
+        <div class="form-group">
+          <%= f.input :first_name, required: true, autofocus: true, class: 'form-control', placeholder: 'first', label: false %>
+          <%= f.input :last_name, required: true, autofocus: true, class: 'form-control', placeholder: 'last', label: false %>
         </div>
-      <% end %>
-      <!--<div id="mainlogin">-->
-        <!--<div id="or">or</div>-->
-        <!--<h1>Or try the old fashioned way!</h1>-->
-        <!--<form action="#">-->
-          <!--<input type="text" placeholder="username or email" value="" required>-->
-          <!--<input type="password" placeholder="password" value="" required>-->
-          <!--<button type="submit"><i class="fa fa-arrow-right"></i></button>-->
-        <!--</form>-->
-        <!--<div id="note"><a href="#">Forgot your password?</a></div>-->
-      <!--</div>-->
-    </div>
+        <div class="form-group">
+          <%= f.input :email, required: true, autofocus: true, class: 'form-control', placeholder: 'email', label: false %>
+        </div>
+        <div class="form-group">
+          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      class: 'form-control', placeholder: 'password', label: false %>
+        </div>
+        <div class="form-group">
+          <%= f.input :password_confirmation, required: true, class: 'form-control', placeholder: 'password conformation', label: false %>
+        </div>
+      </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, 'Sign up', class: 'btn btn-primary block full-width m-b' %>
+      </div>
+      <p class="text-muted text-center">
+        <small>Already have an account?</small>
+      </p>
+      <div class="form-actions">
+        <%= link_to new_user_session_path, class: 'btn btn-primary block full-width m-b' do %>
+          Sign in
+        <% end %>
+      </div>
+    <% end %>
   </div>
+</div>
