[add-job-posting][ RJ ] updated the models to better server the client base

--- a/app/views/dashboards/dashboard_2.html.erb
+++ b/app/views/dashboards/dashboard_2.html.erb
@@ -117,18 +117,20 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3"></div>
+    <div class="col-md-3">
+      <div class="1234"></div>
+      <%= google_adsense_include_tag client: 'ca-pub-7581132771547508', slot: '1234', enable_page_level_ads: true %>
+    </div>
 </div>
-</section>
 </div>
 
 
 
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-7581132771547508",
-        enable_page_level_ads: true
-    });
-</script>
+<!--<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
+<!--<script>-->
+<!--    (adsbygoogle = window.adsbygoogle || []).push({-->
+<!--        google_ad_client: "ca-pub-7581132771547508",-->
+<!--        enable_page_level_ads: true-->
+<!--    });-->
+<!--</script>-->
